@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9793] "Fedora skal kun tilgås direkte indefra fedora namespacet"
    - bug [9785] "dk.dbc.opensearch.common.types.HarvestType har overflødig getName() metode"
    - bug [9480] "Vi skal ikke have funktionelletest med i oversigten over unittestede filer"
    - bug [9629] "Create work:* objects in fedora."
